# coter-encrypt

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  package-lock.json  package.json  readme.md
.cargo/: config.toml
.github/workflows/: release.yml
browser-extension/: background.js  content-script.js  manifest.json
crates/coter-core/: Cargo.toml
crates/coter-core/src/: crypto.rs  executor.rs  expression.rs  lib.rs  project_store.rs  schema.rs  validation.rs
docs/superpowers/plans/: 2026-07-22-merge-monitor.md
docs/superpowers/specs/: 2026-06-24-storage-rules-design.md  2026-06-24-storage-rules-plan.md  2026-07-22-http-proxy-settings-design.md  2026-07-22-merge-monitor-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/api/: certQuery.js  encrypt.js  har.js  httpProxy.js  mergeMonitor.js  ossTransfer.js  pipelineMonitor.js  project.js  tauriClient.js
frontend/src/components/: ComponentConfigPanel.vue  HelloWorld.vue  HttpProxyModal.vue  MysqlDatasourceModal.vue  SystemNotifyBridge.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/mipmap-anydpi-v26/: ic_launcher.xml
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: browser_bridge.rs  cert_query.rs  crypto.rs  executor.rs  har.rs  http_client.rs  main.rs  merge_monitor.rs  oss_transfer.rs  pipeline_monitor.rs  project_store.rs  system_notify.rs
src-tauri/tests/fixtures/projects/: 临沂加密.json  安徽SSO.json
src-tauri/windows/: hooks.nsh
tools/: build-all.bat  export-projects.sh  import-projects.sh  package-browser-extension.ps1  package-browser-extension.sh
(+28 files in other folders)
