[package]
name = "coter-encrypt-desktop"
version = "0.1.7"
description = "Coter Encrypt desktop application"
authors = ["Coter Encrypt"]
edition = "2021"

[[bin]]
name = "CoterEncrypt"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
coter-core = { path = "../crates/coter-core" }
crc32fast = "1"
directories = "6"
filetime = "0.2"
futures-util = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql"] }
reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "rustls-tls"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["net", "time"] }
tokio-tungstenite = "0.27"
url = "2"

[dev-dependencies]
tempfile = "3"
