[package]
name = "coter-core"
version = "0.1.9"
edition = "2021"
description = "Core business logic for Coter Encrypt"

[dependencies]
aes = "0.8"
base64 = "0.22"
blowfish = "0.9.1"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1"
directories = "6"
ecb = { version = "0.1", features = ["alloc", "block-padding"] }
filetime = "0.2"
encoding_rs = "0.8"
hmac = "0.12"
md-5 = "0.10"
rand = "0.8"
rsa = "0.9.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
sm3 = "0.5"
sm2 = "0.14.0-rc.9"
sm4 = "0.5.1"

[dev-dependencies]
tempfile = "3"
